--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "db:reset": "prisma migrate reset",
     "db:studio": "prisma studio",
     "db:seed": "tsx prisma/seed.ts",
+    "db:deploy": "prisma migrate deploy",
+    "db:reset-force": "prisma migrate reset --force",
+    "db:seed-prod": "NODE_ENV=production tsx prisma/seed.ts",
+    "db:backup": "pg_dump $DATABASE_URL > backup.sql",
+    "db:restore": "psql $DATABASE_URL < backup.sql",
     "security:audit": "npm audit --audit-level moderate",
     "security:fix": "npm audit fix",
     "security:check": "npm run security:audit && npm run lint && npm run type-check",
