--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@next/bundle-analyzer": "^15.4.4",
     "@prisma/client": "^6.12.0",
     "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
@@ -67,6 +68,7 @@
     "lucide-react": "^0.525.0",
     "next": "15.4.4",
     "next-auth": "^4.24.11",
+    "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
     "prisma": "^6.12.0",
     "react": "19.1.0",
