--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "sanitize-html": "^2.17.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "validator": "^13.15.15",
     "zod": "^4.0.10",
     "zustand": "^5.0.6"
