feat(tests): add comprehensive testing setup with jest and playwright
- added jest config and test scripts in package.json for unit and integration tests
- introduced playwright for end-to-end testing with its configuration file
- created a simple test runner script for jest
- implemented unit tests for the registration API and components
- developed e2e tests for auth flow and dashboard navigation
- added mock service worker (MSW) for API mocking in tests
- created utils for rendering components with necessary providers
- added global setup and teardown scripts for playwright
- included test payload files for testing purposes

--- a/package.json
+++ b/package.json
@@ -14,6 +14,18 @@
     "analyze": "cross-env ANALYZE=true next build",
     "prepare": "husky",
     "commit": "cz",
+    "test": "jest --passWithNoTests",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false",
+    "test:unit": "jest --testPathPattern='(\\.|/)test\\.(ts|tsx|js)$' --passWithNoTests",
+    "test:integration": "jest --testPathPattern='(\\.|/)integration\\.(ts|tsx|js)$' --passWithNoTests",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:all": "npm run test:unit && npm run test:e2e",
+    "playwright:install": "playwright install",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
@@ -86,7 +98,13 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/eslintrc": "^3",
+    "@mswjs/data": "^0.16.2",
+    "@playwright/test": "^1.54.1",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -102,13 +120,20 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "husky": "^9.1.7",
+    "jest": "^30.0.5",
+    "jest-environment-jsdom": "^30.0.5",
     "lint-staged": "^16.1.2",
+    "msw": "^2.10.4",
+    "playwright": "^1.54.1",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4",
+    "ts-jest": "^29.4.0",
     "tsx": "^4.20.3",
     "tw-animate-css": "^1.3.6",
-    "typescript": "^5"
+    "typescript": "^5",
+    "web-streams-polyfill": "^4.1.0",
+    "whatwg-fetch": "^3.6.20"
   },
   "config": {
     "commitizen": {
