--- a/package.json
+++ b/package.json
@@ -57,9 +57,11 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.83.0",
+    "@tanstack/react-table": "^8.21.3",
     "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^3.0.0",
     "axios": "^1.11.0",
@@ -71,6 +73,7 @@
     "compression": "^1.8.1",
     "cookie": "^1.0.2",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "express-rate-limit": "^8.0.1",
     "framer-motion": "^12.23.9",
     "helmet": "^8.1.0",
@@ -83,6 +86,7 @@
     "next-themes": "^0.4.6",
     "prisma": "^6.12.0",
     "react": "19.1.0",
+    "react-day-picker": "^9.8.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.61.1",
     "sanitize-html": "^2.17.0",
